[gd_scene load_steps=26 format=3 uid="uid://751sv7qlcmxa"]

[ext_resource type="Script" path="res://game.gd" id="1_htrjj"]
[ext_resource type="Material" path="res://resources/Clockup_material.tres" id="1_qrysc"]
[ext_resource type="PackedScene" uid="uid://bp4t61akwt6bb" path="res://Player.tscn" id="2_04a31"]
[ext_resource type="PackedScene" uid="uid://cn1iat65somp8" path="res://ui/energy-bar-control.tscn" id="2_atb2s"]
[ext_resource type="Texture2D" uid="uid://5fd0bw77rlxo" path="res://backgrounds/parallax-00.png" id="8_reqle"]
[ext_resource type="Script" path="res://backgrounds/CloudLayer.gd" id="9_gxu3y"]
[ext_resource type="PackedScene" uid="uid://dsquq0jymkv0a" path="res://ui/stamina_bar.tscn" id="10_0vx1d"]
[ext_resource type="Texture2D" uid="uid://dxxulptcf1hb3" path="res://backgrounds/parallax-01.png" id="10_t4xli"]
[ext_resource type="PackedScene" uid="uid://v0qe50hcgq20" path="res://ui/point_label.tscn" id="11_f4hx3"]
[ext_resource type="Script" path="res://backgrounds/MountainLayer.gd" id="11_iay07"]
[ext_resource type="FontFile" uid="uid://d2epuvtq0plau" path="res://ui/Minecraft.ttf" id="12_c3t07"]
[ext_resource type="Texture2D" uid="uid://cc8q3wlga35pl" path="res://backgrounds/parallax-02.png" id="12_e4yh0"]
[ext_resource type="Texture2D" uid="uid://cvtqkjy58phyl" path="res://prototype-sprites/up-button-idle.png" id="13_d0dqf"]
[ext_resource type="Texture2D" uid="uid://d3j46866ymudn" path="res://prototype-sprites/up-button-pressed.png" id="14_2gws0"]
[ext_resource type="Texture2D" uid="uid://dpao1f52o33ko" path="res://prototype-sprites/down-button-idle.png" id="15_bm56n"]
[ext_resource type="Texture2D" uid="uid://bcjt5woms5x6" path="res://prototype-sprites/down-button-pressed.png" id="16_yg7rr"]
[ext_resource type="Texture2D" uid="uid://t5t7r3qh3s3i" path="res://prototype-sprites/switch-button-idle.png" id="17_dreeq"]
[ext_resource type="Texture2D" uid="uid://bf8oe63n0nk0v" path="res://prototype-sprites/switch-button-pressed.png" id="18_l0anw"]
[ext_resource type="Texture2D" uid="uid://ddqr2jt0h28xi" path="res://prototype-sprites/clockup-button-idle.png" id="19_6pp6u"]
[ext_resource type="Texture2D" uid="uid://cgkc58cnri6ks" path="res://prototype-sprites/clockup-button-pressed.png" id="20_0svdp"]
[ext_resource type="Texture2D" uid="uid://cvs3mjskkn22u" path="res://prototype-sprites/attack-button-idle.png" id="21_5ktqa"]
[ext_resource type="Texture2D" uid="uid://xdub1iend4no" path="res://prototype-sprites/attack-button-pressed.png" id="22_egkk1"]

[sub_resource type="LabelSettings" id="LabelSettings_ab2fx"]
font = ExtResource("12_c3t07")
font_size = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmjce"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g46vn"]
size = Vector2(90, 90)

[node name="Game" type="Node2D"]
script = ExtResource("1_htrjj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(638, 355)

[node name="Areas" type="Node2D" parent="."]
material = ExtResource("1_qrysc")

[node name="Player" parent="." instance=ExtResource("2_04a31")]
position = Vector2(279, 300)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(0, -112)
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, -112)

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(713.778, 171.333)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
texture = ExtResource("8_reqle")

[node name="CloudLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(713.778, 171.333)
motion_mirroring = Vector2(1440, 0)
script = ExtResource("9_gxu3y")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CloudLayer"]
texture = ExtResource("10_t4xli")

[node name="MountainLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(712.667, 171.333)
motion_mirroring = Vector2(1440, 0)
script = ExtResource("11_iay07")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/MountainLayer"]
texture = ExtResource("12_e4yh0")

[node name="EnergyBar" parent="." instance=ExtResource("2_atb2s")]
offset_left = 60.0
offset_top = 135.0
offset_right = 60.0
offset_bottom = 135.0

[node name="StaminaBar" parent="." instance=ExtResource("10_0vx1d")]

[node name="ClockupBar" type="ProgressBar" parent="."]
offset_left = 110.0
offset_top = 141.0
offset_right = 120.0
offset_bottom = 289.0
fill_mode = 3
show_percentage = false

[node name="PointLabel" parent="." instance=ExtResource("11_f4hx3")]
offset_left = -992.0
offset_top = 27.0
offset_right = -952.0
offset_bottom = 55.0
label_settings = SubResource("LabelSettings_ab2fx")

[node name="UpTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(78, 332)
texture_normal = ExtResource("13_d0dqf")
texture_pressed = ExtResource("14_2gws0")
shape = SubResource("RectangleShape2D_fmjce")
action = "ui_up"

[node name="DownTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(76, 402)
texture_normal = ExtResource("15_bm56n")
texture_pressed = ExtResource("16_yg7rr")
shape = SubResource("RectangleShape2D_g46vn")
action = "ui_down"

[node name="SwitchFormTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(1041, 332)
texture_normal = ExtResource("17_dreeq")
texture_pressed = ExtResource("18_l0anw")
shape = SubResource("RectangleShape2D_g46vn")
action = "switch_form"

[node name="ClockupTouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2(1127, 437)
texture_normal = ExtResource("19_6pp6u")
texture_pressed = ExtResource("20_0svdp")
shape = SubResource("RectangleShape2D_g46vn")
action = "skill"

[node name="AttackTouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2(966, 439)
texture_normal = ExtResource("21_5ktqa")
texture_pressed = ExtResource("22_egkk1")
shape = SubResource("RectangleShape2D_g46vn")
action = "attack"
